--- a/src/applications/OpprettSak/PersonPanel/PersonPanel.module.css
+++ b/src/applications/OpprettSak/PersonPanel/PersonPanel.module.css
@@ -11,6 +11,6 @@
 }
 
 .neutral {
-  background: white;
+  background: var(--ax-bg-default);
 }
 
