--- a/src/applications/SvarSed/Sak/SakBanner.module.css
+++ b/src/applications/SvarSed/Sak/SakBanner.module.css
@@ -1,5 +1,5 @@
 .popOverButton {
-  color: black;
+  color: var(--ax-text-neutral);
   background-color: transparent;
   padding: 0;
   &:hover {
